{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 9,
  "lineage": "756bd121-256c-11c0-605c-9f8276a9915d",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:security-group/sg-0a7e28757fcc23557",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7e28757fcc23557",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to reach API server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fb08fa21fa7ea931"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myapp-production-cluster-sg",
            "name_prefix": "",
            "owner_id": "054892330771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-production-cluster-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-cluster-sg",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:security-group/sg-0fb08fa21fa7ea931",
            "description": "EKS node security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb08fa21fa7ea931",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a7e28757fcc23557"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "myapp-production-nodes-sg",
            "name_prefix": "",
            "owner_id": "054892330771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-production-nodes-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-nodes-sg",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to reach API server",
            "from_port": 443,
            "id": "sgrule-2924883101",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a7e28757fcc23557",
            "security_group_rule_id": "sgr-0a1ba9da02ec5979c",
            "self": false,
            "source_security_group_id": "sg-0fb08fa21fa7ea931",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.nodes",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cd41944c54b1995",
            "arn": "arn:aws:ec2:us-east-1:054892330771:elastic-ip/eipalloc-08cd41944c54b1995",
            "association_id": "eipassoc-0c7aa2a2975804203",
            "domain": "vpc",
            "id": "eipalloc-08cd41944c54b1995",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0994a76c065026d16",
            "private_dns": "ip-10-0-101-42.ec2.internal",
            "private_ip": "10.0.101.42",
            "public_dns": "ec2-44-210-58-121.compute-1.amazonaws.com",
            "public_ip": "44.210.58.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myapp-production-nat-eip-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-nat-eip-us-east-1a",
              "Project": "myapp"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:internet-gateway/igw-0b282967119c0f127",
            "id": "igw-0b282967119c0f127",
            "owner_id": "054892330771",
            "tags": {
              "Name": "myapp-production-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-igw",
              "Project": "myapp"
            },
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cd41944c54b1995",
            "association_id": "eipassoc-0c7aa2a2975804203",
            "connectivity_type": "public",
            "id": "nat-0538a908f7593b3d0",
            "network_interface_id": "eni-0994a76c065026d16",
            "private_ip": "10.0.101.42",
            "public_ip": "44.210.58.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ffbddcf0b8d45ffc",
            "tags": {
              "Name": "myapp-production-nat-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-nat-us-east-1a",
              "Project": "myapp"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:route-table/rtb-030b388ccc94341e2",
            "id": "rtb-030b388ccc94341e2",
            "owner_id": "054892330771",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0538a908f7593b3d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myapp-production-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-private-rt",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:route-table/rtb-09420e977010930c5",
            "id": "rtb-09420e977010930c5",
            "owner_id": "054892330771",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b282967119c0f127",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myapp-production-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-public-rt",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052be505132f05924",
            "route_table_id": "rtb-030b388ccc94341e2",
            "subnet_id": "subnet-02d1e191d7ab15828"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef6357e661d7cc4a",
            "route_table_id": "rtb-030b388ccc94341e2",
            "subnet_id": "subnet-0db472c268c341796"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2e465c7c7d0314b",
            "route_table_id": "rtb-030b388ccc94341e2",
            "subnet_id": "subnet-059183cd6b0c11d43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064ddd5deaa80235a",
            "route_table_id": "rtb-09420e977010930c5",
            "subnet_id": "subnet-0ffbddcf0b8d45ffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cc4e25787851a0b",
            "route_table_id": "rtb-09420e977010930c5",
            "subnet_id": "subnet-0fe0eb9ad619a2065"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0254eb9697cae3daf",
            "route_table_id": "rtb-09420e977010930c5",
            "subnet_id": "subnet-038f8f415c3e07383"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:security-group/sg-04000d43ecef428c7",
            "description": "Security group for VPC endpoints",
            "egress": [],
            "id": "sg-04000d43ecef428c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myapp-production-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "054892330771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-production-vpc-endpoints-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-vpc-endpoints-sg",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:subnet/subnet-02d1e191d7ab15828",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d1e191d7ab15828",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054892330771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-production-private-us-east-1a",
              "karpenter.sh/discovery": "myapp-production",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-private-us-east-1a",
              "Project": "myapp",
              "karpenter.sh/discovery": "myapp-production",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:subnet/subnet-0db472c268c341796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db472c268c341796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054892330771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-production-private-us-east-1b",
              "karpenter.sh/discovery": "myapp-production",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-private-us-east-1b",
              "Project": "myapp",
              "karpenter.sh/discovery": "myapp-production",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:subnet/subnet-059183cd6b0c11d43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059183cd6b0c11d43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054892330771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-production-private-us-east-1c",
              "karpenter.sh/discovery": "myapp-production",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-private-us-east-1c",
              "Project": "myapp",
              "karpenter.sh/discovery": "myapp-production",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:subnet/subnet-0ffbddcf0b8d45ffc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffbddcf0b8d45ffc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "054892330771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-production-public-us-east-1a",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-public-us-east-1a",
              "Project": "myapp",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:subnet/subnet-0fe0eb9ad619a2065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe0eb9ad619a2065",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "054892330771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-production-public-us-east-1b",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-public-us-east-1b",
              "Project": "myapp",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:subnet/subnet-038f8f415c3e07383",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038f8f415c3e07383",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "054892330771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-production-public-us-east-1c",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-public-us-east-1c",
              "Project": "myapp",
              "kubernetes.io/cluster/myapp-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ebb43332376c9b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054892330771:vpc/vpc-06ebb43332376c9b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02be1a5cf08ac63f2",
            "default_route_table_id": "rtb-0b0c632b4159c69e1",
            "default_security_group_id": "sg-0812c050a49e2c918",
            "dhcp_options_id": "dopt-0172d3ce463664fec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ebb43332376c9b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0c632b4159c69e1",
            "owner_id": "054892330771",
            "tags": {
              "Name": "myapp-production-vpc",
              "kubernetes.io/cluster/myapp-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "myapp-production-vpc",
              "Project": "myapp",
              "kubernetes.io/cluster/myapp-production": "shared"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}